tests/e2e/semantics/fn_return_inference_fail.error
Error: syntax error in story at line 3, column 12

3|        return a
                 ^

E0102: `string` can't be implicitly converted to expected return type `int`.
